--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prompts": "^2.4.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
+    "@types/prompts": "^2.4.9",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2"
   }
