--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src/**/*.ts --exec ts-node -T src/main.ts"
+    "dev": "nodemon --watch src/**/*.{ts,ejs} --ext ts,ejs --exec ts-node -T src/main.ts",
+    "local": "ts-node -T src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "prompts": "^2.4.2",
-    "uuid": "^10.0.0"
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
     "@types/prompts": "^2.4.9",
     "@types/uuid": "^10.0.0",
+    "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2"
   }
 }
