--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "uuid": "^10.0.0",
@@ -22,6 +23,7 @@
     "@types/node": "^20.14.9",
     "@types/prompts": "^2.4.9",
     "@types/uuid": "^10.0.0",
+    "nodemon": "^3.1.4",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2"
   }
